# cuda-image-filters

./: CMakeLists.txt  README.md
demo/: dummy.ppm  dummyBoxblur.ppm  dummyGrayscale.ppm
include/: common.hpp  filters.hpp  io.hpp  ppm.hpp
scripts/: gen_ppm_dummy.py
src/: filters_cpu.cpp  filters_cuda.cu  io_stb.cpp  main.cpp  ppm.cpp
